--- a/workshops/upcoming-workshops.html
+++ b/workshops/upcoming-workshops.html
@@ -1,8 +1,17 @@
 ---
-layout: workshops_browse
-title: Upcoming workshops - The Carpentries
-breadcrumb: Upcoming workshops
+layout: workshops
+title: Upcoming Workshops
+breadcrumb: Upcoming Workshops
 ---
+<div class="section" id="introduction">
+    <h3>Inclusive and hands-on events, empowering students to learn new skills and build confidence in using them in their work.</h3>
+	<p>Select an event to learn more about that event including:</p>
+	<ul>
+		<li>Sample Schedule & Lessons,</li>
+		<li>Registration information,</li>
+		<li>and organiser contact information.</li>
+	</ul>
+</div>
 <div class="btn-group">
 	<button type="button" class="btn btn-text dropdown-toggle sort" data-bs-toggle="dropdown" aria-expanded="false">
 		Sort by date
@@ -21,4 +30,4 @@ breadcrumb: Upcoming workshops
 </div>
 <hr/>
 <br/>
-<p class="sm">See past workshops <a href="{% link workshops/past-workshops.html %}" class="link underline">here</a>.</p>
+<p class="sm">See past workshops <a href="{% link workshops/past-workshops.html %}" class="underline">here</a>.</p>
