fix missing closing on trainer event page

--- a/trainer-training/apply.html
+++ b/trainer-training/apply.html
@@ -70,5 +70,7 @@ breadcrumb: Apply
               Training sessions for the new cohort of Trainers will begin.
             </div>
             <span class="badge bg-primary rounded-pill">27 March</span>
-          </li>
-      </ol>
+        </li>
+    </ol>
+  </div>
+  
