update introduction and id reference

--- a/workshops/upcoming.html
+++ b/workshops/upcoming.html
@@ -7,7 +7,8 @@ breadcrumb: Upcoming Workshops
     <h3>Inclusive and hands-on events, empowering students to learn new skills and build confidence in using them in their work.</h3>
 	<p>Select an event to learn more about that event including:</p>
 	<ul>
-		<li>Sample Schedule & Lessons,</li>
+		<li>Lessons being taught</li>
+		<li>Schedule preview</li>
 		<li>Registration information,</li>
 		<li>and organiser contact information.</li>
 	</ul>
@@ -25,7 +26,7 @@ breadcrumb: Upcoming Workshops
 <button type="button" class="btn btn-text filter float-end" aria-expanded="false">
 	{% asset "filter" %} Filter
 </button>
-<div id="workshop-container">
+<div id="workshop_container">
 	{% include parts/workshop_list.html data=site.data.all_upcoming_workshops %}
 </div>
 <hr/>
