Update drafts for instructor training pages

--- a/instructor-training/upcoming.html
+++ b/instructor-training/upcoming.html
@@ -5,28 +5,55 @@ breadcrumb: Upcoming Events
 ---
 <div class="section" id="introduction">
     <h2>About Instructor Training</h2>
-	<p>This training is designed for people who want to become certified Carpentries instructors. Instructor Training Events teach:</p>
+	<p>Carpentries Instructor Training is a 16-hour, hands-on training that covers the basics of educational psychology and evidence-based teaching practices. It is also the first step to become a certified Carpentries Instructor. Instructor Training has the following goals:</p>
 	<ul>
-		<li>UPDATE</li>
-		<li>UPDATE</li>
-		<li>UPDATE</li>
+		<li>Introduce you to evidence-based teaching practices.</li>
+		<li>Teach you how to create a positive environment for learners at your workshops.</li>
+		<li>Provide opportunities for you to practice and build your teaching skills.</li>
+        <li>Help you become integrated into the Carpentries community.</li>
+        <li>Prepare you to use these teaching skills in teaching Carpentries workshops.</li>
 	</ul>
 </div>
 <div class="section" id="how_to_register">
-    <h2>How to Register for Instructor Training</h2>
-	<p>This training is designed for people who want to become certified Carpentries instructors. Instructor Training Events teach:</p>
-	<ul>
-		<li>UPDATE</li>
-		<li>UPDATE</li>
-		<li>UPDATE</li>
-	</ul>
-</div>
-<div class="section" id="when_to_register">
-    <h2>When To Register</h2>
-	<h3>Membership and Other Groups</h3>
-    <p>If you have a registration code from a member organisation or other group, you may register at anytime for the event of your choice below. All events are closed when the event is full or one week prior to their start date.</p>
-	<h3>Open Instructor Training</h3>
-    <p>If you were accepted into the Open Instructor Training program, registration will open approximately one month (~30 days) before the event start date. All events are closed when the event is full or one week prior to their start date.</p>
+    <h2>How To Register</h2>
+	<div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">By Invitation</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Membership and Other Groups</h6>
+                <p class="card-text">Members and other groups may receive priority registration for instructor training events.</p>
+            </div>
+            <ol class="list-group list-group-numbered list-group-flush">
+                <li class="list-group-item">Receive invitation & registration code</li>
+                <li class="list-group-item">Register for an event (see list below)</li>
+                <li class="list-group-item">Create a profile with The Carpentries</li>
+            </ol>
+            <div class="card-body">
+                <a href="#" class="btn btn-primary">Profile Creation Form</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">By Application</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Open Instructor Training Program</h6>
+                    <p class="card-text">The Carpentries Open Instructor Training Program is openly accessible to all who are insterested in instructor training.</p>
+                </div>
+                <ol class="list-group list-group-numbered list-group-flush">
+                    <li class="list-group-item">Apply to the Open Instructor Training Program</li>
+                    <li class="list-group-item">Receive acceptance & registration code</li>
+                    <li class="list-group-item">Register for an event (see list below)</li>
+                </ol>
+                <div class="card-body">
+                    <a href="#" class="btn btn-primary">Apply to Open Training</a>
+                </div>
+              </div>
+        </div>
+    </div>
+    <h4>Note for Open Instructor Training Applicants</h4>
+    <p>If you were accepted into the Open Instructor Training program, registration will open approximately one month (~30 days) before the event start date. For all events, registration will close when the event is full or one week prior to their start date.</p>
 </div>
 <div class="section" id="cancellation">
     <h2>Attendance & Cancellation Policies</h2>
@@ -40,22 +67,22 @@ breadcrumb: Upcoming Events
 	<p>Select an event below to view the eventbrite registration page. We are a global community so please confirm that the selected event works for your timezone. A link is provided next to each event that will convert the start time to your local time zone.</p>
     <p>All events listed below are open for registration until they are full or one week before their start date.</p>
     <hr>
-    <h4><a href="https://www.eventbrite.com/e/the-carpentries-online-instructor-training-february-15-16-2023-tickets-476729620127" class="underline">February 15-16, 2023</a></h4>
+    <h3><a href="https://www.eventbrite.com/e/the-carpentries-online-instructor-training-february-15-16-2023-tickets-476729620127" class="underline">February 15-16, 2023</a></h3>
 	<p><strong>Two 8-hour days:</strong> 9 am to 5 pm N. America Mountain Time / 11 am to 7 pm N. America Eastern Time / <a href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=Carpentries+Instructor+Training&iso=20230215T09&p1=75&ah=8" class="underline">See the start date and time in your time zone</a></p>
     <hr>
-    <h4><a href="https://www.eventbrite.com/e/the-carpentries-online-instructor-training-february-15-16-2023-tickets-476729620127" class="underline">February 21-24, 2023</a></h4>
+    <h3><a href="https://www.eventbrite.com/e/the-carpentries-online-instructor-training-february-15-16-2023-tickets-476729620127" class="underline">February 21-24, 2023</a></h3>
 	<p><strong>Four 4-hour days:</strong> 1 pm to 5 pm N. America Eastern Time / 10 am to 2 pm N. America Pacific Time / <a href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=Carpentries+Instructor+Training&iso=20230215T09&p1=75&ah=8" class="underline">See the start date and time in your time zone</a></p>
     <hr>
-    <h4><a href="https://www.eventbrite.com/e/the-carpentries-online-instructor-training-february-15-16-2023-tickets-476729620127" class="underline">March 6-9, 2023</a></h4>
+    <h3><a href="https://www.eventbrite.com/e/the-carpentries-online-instructor-training-february-15-16-2023-tickets-476729620127" class="underline">March 6-9, 2023</a></h3>
 	<p><strong>Four 4-hour days:</strong> 1 pm to 5 pm N. America Eastern Time / 10 am to 2 pm N. America Pacific Time / <a href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=Carpentries+Instructor+Training&iso=20230215T09&p1=75&ah=8" class="underline">See the start date and time in your time zone</a></p>
     <hr>
-    <h4><a href="https://www.eventbrite.com/e/the-carpentries-online-instructor-training-february-15-16-2023-tickets-476729620127" class="underline">March 14-15, 2023</a></h4>
+    <h3><a href="https://www.eventbrite.com/e/the-carpentries-online-instructor-training-february-15-16-2023-tickets-476729620127" class="underline">March 14-15, 2023</a></h3>
 	<p><strong>Two 8-hour days:</strong> 9 am to 5 pm N. America Mountain Time / 11 am to 7 pm N. America Eastern Time / <a href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=Carpentries+Instructor+Training&iso=20230215T09&p1=75&ah=8" class="underline">See the start date and time in your time zone</a></p>
     <hr>
-    <h4><a href="https://www.eventbrite.com/e/the-carpentries-online-instructor-training-february-15-16-2023-tickets-476729620127" class="underline">March 20-23, 2023</a></h4>
+    <h3><a href="https://www.eventbrite.com/e/the-carpentries-online-instructor-training-february-15-16-2023-tickets-476729620127" class="underline">March 20-23, 2023</a></h3>
 	<p><strong>Four 4-hour days:</strong> 1 pm to 5 pm N. America Eastern Time / 10 am to 2 pm N. America Pacific Time / <a href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=Carpentries+Instructor+Training&iso=20230215T09&p1=75&ah=8" class="underline">See the start date and time in your time zone</a></p>
     <hr>
-    <h3>Can't Find An Event That Works?</h3>
+    <h4>Can't Find An Event That Works?</h4>
     <p>New trainings are added to this event list on a quarterly basis. We generally update the list of events on or around the following dates:</p>
     <ul>
         <li>1-14 March : Events added for April - June</li>
@@ -64,8 +91,33 @@ breadcrumb: Upcoming Events
         <li>1-14 December : Events added for January - March</li>
     </ul>
 </div>
-
-<div class="callout">
+<div class="section" id="what_to_expect">
+	<h2>What To Expect After Registration</h2>
+    <ol class="list-group list-group-numbered">
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+            <div class="fw-bold">Application Review</div>
+            Application responses are reviewed carefully, ranked, and selected to receive Instructor Training sponsored by The Carpentries. Applications are accepted on a rolling basis, meaning applications that are not accepted in the first round of review may be accepted at a later round of review based on scoring and capacity.
+          </div>
+          <span class="badge bg-primary rounded-pill">Monthly</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+            <div class="fw-bold">Applicants Notified</div>
+            The Instructor Training Team will send out notifications to accepted applicants, that includes an event registration code.
+          </div>
+          <span class="badge bg-primary rounded-pill">3+ Months</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+            <div class="fw-bold">Register For A Training Event</div>
+            Accepted applicants may use their registration code to register for an upcoming training event. After being accepted, your profile is already complete; and it is not necessary to fill out the form a second time.
+          </div>
+          <span class="badge bg-primary rounded-pill">3+ Months</span>
+        </li>
+    </ol>
+</div>
+<div class="callout-info" id="contact_instructor_training">
 	<h2>Contact Us</h2>
 	<p><strong>Have Questions?</strong> Please consult our <a class="underline" href="{% link instructor-training/faq.html %}">Instructor Training FAQ</a> or contact the Instructor Training Team. Our Team is ready to answer any additional questions you may have. To reach us, or to find out more, please send us an email to <a class="underline" href="mailto:instructor.training@carpentries.org">instructor.training@carpentries.org</a>.</p>
 </div>
