--- a/instructor-training/index.html
+++ b/instructor-training/index.html
@@ -5,9 +5,9 @@ breadcrumb: Instructor Training
 ---
 <div class="section" id="trainer_introduction">
 	<h2>Overview</h2>
-	<p>Instructor Trainers (Trainers) teach The Carpentries Instructor Training Events. They train new Instructors in the basics of educational psychology and evidence-based teaching practices. They also support and play a leadership role in the oversight of the Instructor Training program.</p>
-	<p>Instructor Trainer Training is the process by which we onboard new Instructor Trainers. The training consists of 10 weekly 1-hour sessions, where we will discuss The Carpentries teaching philosophy and review supporting materials summarising the research that underpins our Instructor Training curriculum.</p>
-    <h3>Why Become A Trainer?</h3>
+	<p>Carpentries Instructor Training gives you strategies to teach coding and data workshops. Our 16-hour hands-on training teaches the basics of educational psychology and evidence-based teaching practices. During the training, you will practise these new skills while getting to know others who share your interests.</p>
+	<p>After the training, you may complete three "checkout" steps to become a Certified Carpentries Instructor. Certified Instructors can volunteer to teach at our "centrally-organised workshops" with our global community virtually or in-person. They are also able to organise Carpentries workshops for their local community.</p>
+    <h3>Why Instructor Training?</h3>
 	<div class="card mb-3">
         <div class="row g-0">
           <div class="col-md-3">
@@ -26,8 +26,41 @@ breadcrumb: Instructor Training
             </div>
             <div class="col-md-6">
               <div class="card-body">
+                <h5 class="card-title">Create An Inclusive Classroom</h5>
+                <p class="card-text">Leave with tools to create a positive classroom environment.</p>
+              </div>
+            </div>
+          </div>
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="..." class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-6">
+              <div class="card-body">
+                <h5 class="card-title">Live Practice</h5>
+                <p class="card-text">You will have several opportunities to practise teaching and receive real-time feedback.</p>
+              </div>
+            </div>
+          </div>
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="..." class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-6">
+              <div class="card-body">
+                <h5 class="card-title">Become A Certified Carpentries Instructor</h5>
+                <p class="card-text">Teaching skills are in demand! Completing Instructor Training and becoming certified look great on applications for teaching and research-support positions.</p>
+              </div>
+            </div>
+          </div>
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="..." class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-6">
+              <div class="card-body">
                 <h5 class="card-title">Teaching Opportunities</h5>
-                <p class="card-text">Continue to develop your own teaching skill by teaching Instructor Training Events.</p>
+                <p class="card-text">Certified Instructors have ongoing opportunities to develop their teaching skill by teaching.</p>
               </div>
             </div>
           </div>
@@ -37,19 +70,8 @@ breadcrumb: Instructor Training
             </div>
             <div class="col-md-6">
               <div class="card-body">
-                <h5 class="card-title">Program Leadership</h5>
-                <p class="card-text">Trainers are empowered to guide the development of The Carpentries Instructor Training program.</p>
-              </div>
-            </div>
-          </div>
-          <div class="row g-0">
-            <div class="col-md-3">
-              <img src="..." class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-6">
-              <div class="card-body">
-                <h5 class="card-title">Leadership Through Teaching</h5>
-                <p class="card-text">Help people become more effective teachers by training the new Carpentries Instructors, teaching assistants, and more.</p>
+                <h5 class="card-title">Local Impact</h5>
+                <p class="card-text">Instructors have the option to team up with other colleagues to self-organise Carpentries workshops that address the coding or data needs of their peers. Instructors can lead the way to improve coding and data skills in communities they care about.</p>
               </div>
             </div>
           </div>
@@ -73,93 +95,86 @@ breadcrumb: Instructor Training
 </div>
 <div class="section" id="training_curricula">
 	<h2>What You'll Learn</h2>
-	<p>The Carpentries has three official lesson programs, each providing lessons catered to a specific audience or purpose. Our workshops may focus on lessons from one set of curricula or mix and match lesson's to provide the audience with an experience catered to their needs.</p>
+	<p>Carpentries Instructor Training is a 16-hour, hands-on training that covers the basics of educational psychology and evidence-based teaching practices. It is also the first step to become a certified Carpentries Instructor. Instructor Training has the following goals:</p>
 	<div class="card">
         <div class="card-header">
-          Trainer Training Curriculum Summary
+          Instructor Training Curriculum Summary
         </div>
         <div class="card-body">
-          <ul class="checked-list">
-            <li>How Learning Works: Seven Research-Based Principles for Teaching</li>
-            <li>Creating inclusive and accessible learning spaces</li>
-            <li>Preparing for and teaching Instructor Training</li>
-            <li>Hosting teaching demonstrations</li>
-            <li>Onboarding to the Trainer community</li>
-          </ul>
+            <ul class="checked-list">
+                <li>How Learning Works: Seven Research-Based Principles for Teaching</li>
+                <li>Creating Inclusive And Accessible Learning Spaces</li>
+                <li>Memory And Cognitive Load</li>
+                <li>Building Skill With Feedback</li>
+                <li>Motivation and Demotivation</li>
+                <li>Preparing To Teach</li>
+                <li>Review Instructor Certification Steps</li>
+                <li>Onboarding To The Instructor Community</li>
+            </ul>
         </div>
       </div>
-	<a href="{% link trainer-training/apply.html %}" class="btn btn-primary">Learn how to apply</a>
+	<a href="{% link instructor-training/apply.html %}" class="btn btn-primary">Learn how to apply</a>
 </div>
-<div class="section" id="becoming_a_trainer">
-	<h2>How To Become A Trainer</h2>
-	<p>The Carpentries Trainer Training is a highly-competitive training program that is openly available to everyone. A limited number of applicants are accepted into the program each year. Training is run 1-2 times per year and takes place over 10 weekly 1-hour sessions. Following the 10-week Training, trainees are asked to complete a number of exercises to become certified Carpentries Trainers.</p>
+<div class="section" id="become_an_instructor">
+	<h2>How To Become An Instructor</h2>
+	<p>The Carpentries workshops are taught by trained and certified volunteer Instructors. Certified Carpentries Instructors can Self-Organise workshops at home or volunteer to join a workshop at another site through our Centrally-Organised workshops program. We match our Instructors with teaching opportunities that fit their schedules, travel interests, and availability. We have held workshops in over 40 countries on every continent (including Antarctica!).</p>
+    <p>This is how you can become a Certified Instructor:</p>
     <ol class="list-group list-group-numbered">
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
-            <div class="fw-bold">Submit An Application & Get Accepted</div>
-            Applications for Trainer Training open 1-2 times per year. You will need to submit an application and be accepted into the program to attend training.
+            <div class="fw-bold">Get Invited or Accepted</div>
+            There are two ways to access Instructor Training. Apply and be accepted to our Open Instructor Training Program. Optionally, you may receive an invitation via email from a member organisation or other group that has arranged for training.
           </div>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
-            <div class="fw-bold">Complete 10 Week Training</div>
-            Attend 10 weekly 1-hour sessions where you'll learn the basics of educational psychology and evidence-based teaching practices, and how to teach this information to others. 
+            <div class="fw-bold">Attend An Instructor Training Event</div>
+            The 16-hour training runs over two full days or four half days and covers the basics of educational psychology, evidence-based classroom practices, and how to apply both to teaching workshops for The Carpentries.
           </div>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
             <div class="fw-bold">Complete Certification Steps</div>
-            After the training, you will be asked to shadow an Instructor Training Event and a Teaching Demonstration. 
+            After the training, you will be asked to complete 3 checkout steps: Attend a discussion session where you can ask questions about teaching and learn from other instructors; Complete a teaching demonstration, which is a group practice session where you will demonstrate 5-minutes of teaching and receive feedback; and contribute to a Carpentries Lesson. See our <a href="https://carpentries.github.io/instructor-training/checkout/index.html" class="underline">Checkout Instructions</a> page for more details.
           </div>
         </li>
-      </ol>
-
-    <h3>Prior Instructor Certification</h3>
-    <p>If you are not a certified Carpentries Instructor, please expect a larger time committment when becoming a certified Trainer. While being a certified Carpentries Instructor is not a pre-requisite to being accepted in the Trainer Training program, we do require that all Trainers be certified Carpentries Instructors. If you are not a certified Carpentries Instructor before being accepted into the Trainer Training program, you will be required to complete the Instructor Training Program and become a certified Instructor for your after training certification steps.</p>
-    <p>If you are not a certified Carpentries Instructor and you are interested in becoming a Trainer, we encourage you to become an Instructor while you wait for Trainer Training applications to open.</p>
-    <a href="{% link instructor-training/index.html %}" class="btn btn-secondary">Learn More About Instructor Training</a>
-
-    <h3>Maintaining Trainer Certification</h3>
-    <p>Trainer Certrification is renewed annually and is based on the Trainer's activity in the previous year. Active Trainer participation is important to maintaining Trainer Certification. Trainers can maintain their active certification status by participating in the following activities as their schedule allows:</p>
-    <ul>
-        <li>Teaching Instructor Training</li>
-        <li>Hosting Teaching Demonstrations</li>
-        <li>Attending Monthly Trainer Community Meetings</li>
-    </ul>
-    <a href="{% link trainer-training/apply.html %}" class="btn btn-primary">Learn how to apply</a>
+    </ol>
+    <h3>Open Instructor Training Program</h3>
+    <p>The Open Instructor Training Program is a Carpentries-sponsored program in which individual applicants may be invited to receive training at no cost. Applications are scored and accepted on a rolling basis in order of scoring. This program is not for groups; multiple individuals from a single institution or cohort may be considered but will not be admitted simultaneously.</p>
+    <a href="{% link instructor-training/apply.html %}" class="btn btn-primary">Apply to Open Instructor Training Program</a>
 </div>
-<div class="section" id="trainer-community">
+<div class="section" id="instructor_community">
 	<h3>More than a Training.<br/>Join our global community.</h3>
-	<p>By attending Trainer Training, you are joining a community of trainers, instructors, maintainers, and more.</p>
+	<p>By attending Instructor Training, you are joining a community of instructors, trainers, maintainers, and more.</p>
 	<a href="#" class="btn btn-secondary">Get Involved</a>
 	<div class="row statistics about-us">
 		<div class="col-md-4 stat">
 			{% asset blob-left class="blob" alt:'' %}
 			<div class="wrapper">
 				<p class="stat-text">More than</p>
-				<p class="stat-number">100</p>
-				<p class="stat-text">Trainers</p>
+				<p class="stat-number">3,800</p>
+				<p class="stat-text">Certified Instructors</p>
 			</div>
 		</div>
 		<div class="col-md-4 stat">
 			{% asset blob-middle class="blob" alt:'' %}
 			<div class="wrapper">
-				<p class="stat-text">Approximately</p>
-				<p class="stat-number">50</p>
-				<p class="stat-text">Annual Instructor Trainings</p>
+				<p class="stat-text">Recommended by</p>
+				<p class="stat-number">9 of 10</p>
+				<p class="stat-text">Trainees</p>
 			</div>
 		</div>
 		<div class="col-md-4 stat">
 			{% asset blob-right class="blob" alt:'' %}
 			<div class="wrapper">
 				<p class="stat-text">More than</p>
-				<p class="stat-number">3,400</p>
-				<p class="stat-text">Certified Istructors</p>
+				<p class="stat-number">40</p>
+				<p class="stat-text">Training Events Annually</p>
 			</div>
 		</div>
 	</div>
 </div>
-<div class="callout">
+<div class="callout-info" id="contact_instructor_training">
 	<h2>Contact Us</h2>
-	<p><strong>Have Questions?</strong> Please consult our <a class="underline" href="{% link trainer-training/faq.html %}">Trainer Training FAQ</a> or contact the Instructor Training Team. Our Team is ready to answer any additional questions you may have. To reach us, or to find out more, please send us an email to <a class="underline" href="mailto:instructor.training@carpentries.org">instructor.training@carpentries.org</a>.</p>
+	<p><strong>Have Questions?</strong> Please consult our <a class="underline" href="{% link instructor-training/faq.html %}">Instructor Training FAQ</a> or contact the Instructor Training Team. Our Team is ready to answer any additional questions you may have. To reach us, or to find out more, please send us an email to <a class="underline" href="mailto:instructor.training@carpentries.org">instructor.training@carpentries.org</a>.</p>
 </div>
