correct error in code by removing extra bracket

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -9,10 +9,10 @@ breadcrumb: Workshops
 	<h3>Why The Carpentries Workshops?</h3>
 	<ul>
 		<li><strong>No previous experience needed.</strong>	Our workshops target novice learners with little to no prior experience.</li>
-		<li>><strong>Live Coding and Hands-On.</strong> You'll code alongside the instructor and more blah blah blah about live coding things at the workshop.</li>
-		<li>><strong>Real-World Applications.</strong> Our workshops include real-world examples that demonstrate practical skills used in the workplace. The exercises in The Carpentries lesson are designed to help you practice skills that you can immediately apply to your work.</li>
-		<li>><strong>Inclusive community of practice.</strong> Cotton candy pastry tart macaroon shortbread gingerbread gummies chocolate bar. Cookie cotton candy chocolate cake soufflé bonbon biscuit cake.</li>
-		<li>><strong>Broad scope of lessons.</strong> We offer a variety of lessons serving various discplines from librarians to astronomers.</li>
+		<li><strong>Live Coding and Hands-On.</strong> You'll code alongside the instructor and more blah blah blah about live coding things at the workshop.</li>
+		<li><strong>Real-World Applications.</strong> Our workshops include real-world examples that demonstrate practical skills used in the workplace. The exercises in The Carpentries lesson are designed to help you practice skills that you can immediately apply to your work.</li>
+		<li><strong>Inclusive community of practice.</strong> Cotton candy pastry tart macaroon shortbread gingerbread gummies chocolate bar. Cookie cotton candy chocolate cake soufflé bonbon biscuit cake.</li>
+		<li><strong>Broad scope of lessons.</strong> We offer a variety of lessons serving various discplines from librarians to astronomers.</li>
 	</ul>
 	<a href="{% link workshops/upcoming-workshops.html %}" class="btn btn-primary">View Upcoming Workshops</a>
 	<figure>
