spelling correction - non profit

--- a/support/membership/index.html
+++ b/support/membership/index.html
@@ -87,7 +87,7 @@ breadcrumb: Membership
 			<td>$1,250</td>
 		</tr>
 		<tr>
-			<td colspan="7" class="small">The pricing above applies to for-profit and academic institutions. Pricing for for-profit organisations is four times the price listed for non-profit organisations.</td>
+			<td colspan="7" class="small">The pricing above applies to non-profit and academic institutions. Pricing for for-profit organisations is four times the price listed for non-profit organisations.</td>
 		</tr>
 	</table>
 	<p>In addition to the above, all Membership levels include:</p>
