update links to just be placeholders

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -14,7 +14,7 @@ breadcrumb: Workshops
 		<li><strong>Inclusive community of practice.</strong> Cotton candy pastry tart macaroon shortbread gingerbread gummies chocolate bar. Cookie cotton candy chocolate cake soufflé bonbon biscuit cake.</li>
 		<li><strong>Broad scope of lessons.</strong> We offer a variety of lessons serving various discplines from librarians to astronomers.</li>
 	</ul>
-	<a href="{% link workshops/upcoming-workshops.html %}" class="btn btn-primary">View Upcoming Workshops</a>
+	<a href="#" class="btn btn-primary">View Upcoming Workshops</a>
 	<figure>
 		{% asset workshops-photo class="img-fluid" %}
 		<figcaption>Image: [image description]</figcaption>
@@ -46,7 +46,7 @@ breadcrumb: Workshops
 		  </div>
 		</div>
 	  </div>
-	<a href="{% link workshops/upcoming-workshops.html %}" class="btn btn-primary">View Upcoming Workshops</a>
+	<a href="#" class="btn btn-primary">View Upcoming Workshops</a>
 </div>
 <div class="section" id="what-to-expect">
 	<h2>Location Options</h2>
