--- a/workshops/past.html
+++ b/workshops/past.html
@@ -25,4 +25,4 @@ breadcrumb: Past Workshops
 </div>
 <hr/>
 <br/>
-<p class="sm">See upcoming workshops <a href="{% link workshops/upcoming-workshops.html %}" class="underline">here</a>.</p>
+<p class="sm">See upcoming workshops <a href="#" class="underline">here</a>.</p>
