--- a/workshops/upcoming.html
+++ b/workshops/upcoming.html
@@ -31,4 +31,4 @@ breadcrumb: Upcoming Workshops
 </div>
 <hr/>
 <br/>
-<p class="sm">See past workshops <a href="{% link workshops/past-workshops.html %}" class="underline">here</a>.</p>
+<p class="sm">See past workshops <a href="{% link workshops/past.html %}" class="underline">here</a>.</p>
